force-app/main/default/objects/QQ_Config__c/QQ_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Quicker Quotes Config</label>
</CustomObject>