force-app/main/default/objects/QQ_Config__c/fields/Quote_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template_Id__c</fullName>
    <label>Quote Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>